--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
-    "vue": "^2.3.3",
-    "vue-router": "^2.3.1",
-    "utvue": "^0.0.40",
+    "highlight.js": "^9.12.0",
     "less": "^2.7.2",
-    "less-loader": "^4.0.3"
+    "less-loader": "^4.0.3",
+    "utvue": "^0.0.40",
+    "vue": "^2.3.3",
+    "vue-clipboard2": "0.0.6",
+    "vue-router": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
