--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "babel-polyfill": "^6.26.0",
     "highlight.js": "^9.12.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
