--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ after_script:
   - git config user.email "${U_EMAIL}"
   - git add .
   - git commit -m "Update website"
-  - git push --force --quiet "https://${test_token}@${GH_REF}" master:${P_BRANCH}
+  - git push --force --quiet "https://${coding_token}@${GH_REF}" master:${P_BRANCH}
 # E: Build LifeCycle
 branches:
   only:
@@ -28,7 +28,11 @@ branches:
 env:
  global:
    # 我将其添加到了travis-ci的环境变量中
-   - GH_REF: github.com/philcui/philcui.github.io.pcvue.git
-   - U_NAME: philcui
-   - U_EMAIL: cuixihang@126.com
-   - P_BRANCH: gh-pages
+  #  - GH_REF: github.com/philcui/philcui.github.io.pcvue.git
+  #  - U_NAME: philcui
+  #  - U_EMAIL: cuixihang@126.com
+  #  - P_BRANCH: gh-pages
+   - GH_REF: git.coding.net/HowardTsui/HowardTsui.git
+   - U_NAME: HowardTsui
+   - U_EMAIL: 857841460@qq.com
+   - P_BRANCH: master
